--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ h2 {
     text-align: center;
     font-family: "Amatic SC", sans-serif;
     font-size: 2rem;
+    color: #03295a;
 
 }
 div#titleDetails{
@@ -25,6 +26,7 @@ div#titleDetails{
     
     font-size: larger;
     font-weight: bold;
+    color: #03295a;
 }
 div.sectionContainer {
     display: flex;
