--- a/style.css
+++ b/style.css
@@ -42,5 +42,6 @@ div.sectionImage > img {
 div.sectionContent {
     flex: 1;
     padding: 20px;
-    font-family: "Lato", Helvetica, Arial, sans-serif;
+    font-family: "Amatic SC", sans-serif;
+
 }
