--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
 body {
     font-family: "Lato", sans-serif;
     color: rgb(227,6,19);
+    background-color: rgb(0,119,161, 0.5);
+    font-size: 1.2rem;
 }
 h1 {
     text-align: center;
@@ -16,7 +18,7 @@ div#titleDetails {
 }
 h2 {
     text-align: center;
-    font-family: "Amatic SC", sans-serif;
+    font-family: "Lato", sans-serif;
     font-size: 2rem;
     color: #03295a;
 
@@ -42,6 +44,5 @@ div.sectionImage > img {
 div.sectionContent {
     flex: 1;
     padding: 20px;
-    font-family: "Amatic SC", sans-serif;
-
+    font-family: "Lato", sans-serif;
 }
